--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="delovna mesta, prodajna dela, zaposlitev, agencija za zaposlovanje, call center, telefonska prodaja, telekomunikacije, kariera, prodajne priložnosti, Slovenija" />
     <meta name="author" content="Win Win d.o.o." />
 
-    <title>Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji</title>
+    <title>Win Win D.o.o. | Iščemo prodajne svetovalce - terenska prodaja - promocije / klicni center | Službe po vsej Sloveniji</title>
 
-    <meta property="og:title" content="Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji" />
+    <meta property="og:title" content="Win Win D.o.o. | Iščemo prodajne svetovalce - terenska prodaja - promocije / klicni center | Službe po vsej Sloveniji" />
     <meta property="og:description" content="Win Win je vodilna agencija za zaposlovanje, specializirana za prodajna delovna mesta, telefonsko prodajo, call center in telekomunikacije po Sloveniji." />
     <meta property="og:image" content="https://www.win-win.si/logo2.png" />
     <meta property="og:type" content="website" />
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://www.win-win.si" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji" />
+    <meta name="twitter:title" content="Win Win D.o.o. | Iščemo prodajne svetovalce - terenska prodaja - promocije / klicni center | Službe po vsej Sloveniji" />
     <meta name="twitter:description" content="Win Win je vodilna agencija za zaposlovanje, specializirana za prodajna delovna mesta, telefonsko prodajo, call center in telekomunikacije po Sloveniji." />
     <meta name="twitter:image" content="https://www.win-win.si/logo2.png" />
 
